--- a/fdphd.bib
+++ b/fdphd.bib
@@ -164,8 +164,6 @@
 
 /*}}}*/
 % ---- MSc/PhD theses ----/*{{{*/
-%%
-
 @thesis{nemec2002dp,
   title={Application of methods in time-domain terahertz spectroscopy for investigation of ultrafast dynamics in condensed matters},
   author={Němec, Hynek},
@@ -216,7 +214,6 @@
 }
 /*}}}*/
 Terahertz spectroscopy of ferroelectrics and related materials
-
 
 % == Sources from our group  ==
 % ---- tunability of dielectrics ---- %/*{{{*/
@@ -443,6 +440,15 @@ Terahertz spectroscopy of ferroelectrics and related materials
   pages={892--894},
   year={2006},
   publisher={American Association for the Advancement of Science}
+}
+
+@inproceedings{walien2011anti,
+  title={Anti-resonant response of resonant inclusions?},
+  author={Walien, H and Kettunen, Henrik and Qi, Jiaran and Sihvola, Ari},
+  booktitle={General Assembly and Scientific Symposium, 2011 XXXth URSI},
+  pages={1--4},
+  year={2011},
+  organization={IEEE}
 }
 /*}}}*/
 %  -- homogenisation -- /*{{{*/
@@ -1331,7 +1337,6 @@ lts.fzu.cz/pdf/d-js.pdf
   year      = 2007
 }
 /*}}}*/
-
 % -- Filter diagonalisation (todo) --/*{{{*/
 @article{mandelshtam1997harmonic,
   title={Harmonic inversion of time signals and its applications},
@@ -1350,7 +1355,6 @@ lts.fzu.cz/pdf/d-js.pdf
 % KathleenFDM
 % Mandelshtam 2000 FDM
 /*}}}*/
-
 % -- Material permittivity --/*{{{*/
 @article{rakic1998optical,
   title={Optical properties of metallic films for vertical-cavity optoelectronic devices},
@@ -1511,6 +1515,14 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1962},
   publisher={IOP Publishing}
 }
+
+@article{skaar2014diamagnetism,
+  title={Diamagnetism and the dispersion of the magnetic permeability},
+  author={Skaar, Johannes and Dirdal, Christopher A},
+  journal={arXiv preprint arXiv:1410.5999},
+  year={2014}
+}
+
 /*}}}*/
 
 % -- Homogenisation of nonlocal media such as wires --/*{{{*/
